# jenum

./: CMakeLists.txt  README  jenum.pc.in
include/jenum/: jenum.h
tests/: CMakeLists.txt  unit_test.cpp
